create base project template